added lame  ch. 0

--- a/notes.tex
+++ b/notes.tex
@@ -73,6 +73,10 @@
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section*{On Copyright and Stuff}
+These are just my notes from class. I just wrote down whatever the the teacher put up on the board, and then I typed the stuff up later because it helps me better internalize it and also because I can't read my own handwriting after a week or so. I'm not claiming to own anything here (except for the pictures that I made, I guess.) Don't sell these notes. That's a real dick move.
+\newpage
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Overview of Graph Theory}
 \subsection{Definitions}
